add img and skill page

--- a/personal-info/src/app/homepage/homepage.component.html
+++ b/personal-info/src/app/homepage/homepage.component.html
@@ -1,5 +1,6 @@
 <section class="w-full h-screen bg-home-bg" id="home-page">
   <div class="flex flex-col justify-center items-center h-full">
+    <img class="rounded-full w-80 h-80" src="../../assets/Napas.jpg" width="200"/>
     <div class="text-2xl font-bold text-white my-4 sm:text-4xl">Hello, I'm</div>
     <div class="">
       <div class="text-md font-bold text-[#E76F51] blinking-cursor textwritter sm:text-4xl">Napas Vinitnantharat</div>
