--- a/personal-info/src/app/skill/skill.component.html
+++ b/personal-info/src/app/skill/skill.component.html
@@ -3,7 +3,7 @@
     <div class="text-6xl font-bold text-white sm: pt-32">Skill</div>
     <div class='item-center mt-10'>
       <a href="https://skillicons.dev">
-        <img src="https://skillicons.dev/icons?i=js,ts,html,css,tailwind,materialui,bootstrap,figma,react,nextjs,vue,flutter,linux,bash,go,nodejs,express,mongodb,mysql,redis,docker,git,postman,py,r,selenium,vscode&perline=7"
+        <img src="https://skillicons.dev/icons?i=js,ts,html,css,tailwind,materialui,bootstrap,figma,react,nextjs,vue,flutter,linux,bash,go,nodejs,express,mongodb,mysql,redis,git,docker,kubernetes,openshift,githubactions,postman,py,r,selenium,vscode&perline=7"
           width="700"
           height="700"
         />
