--- a/personal-info/src/app/app.component.html
+++ b/personal-info/src/app/app.component.html
@@ -1,3 +1,5 @@
 <app-navbar></app-navbar>
 <app-homepage></app-homepage>
 <app-skill></app-skill>
+<app-project></app-project>
+<app-workexperience></app-workexperience>
