--- a/personal-info/src/app/homepage/homepage.component.html
+++ b/personal-info/src/app/homepage/homepage.component.html
@@ -1,23 +1,53 @@
 <section class="w-full h-screen bg-home-bg" id="home-page">
   <div class="flex flex-col justify-center items-center h-full">
-    <img class="rounded-full w-80 h-80" src="../../assets/Napas.jpg" width="200"/>
+    <img
+      class="rounded-full w-80 h-80"
+      src="../../assets/Napas.jpg"
+      width="200"
+    />
     <div class="text-2xl font-bold text-white my-4 sm:text-4xl">Hello, I'm</div>
     <div class="">
-      <div class="text-md font-bold text-[#E76F51] blinking-cursor textwritter sm:text-4xl">Napas Vinitnantharat</div>
+      <div
+        class="text-md font-bold text-[#E76F51] blinking-cursor textwritter sm:text-4xl"
+      >
+        Napas Vinitnantharat
+      </div>
     </div>
-    <div class="text-lg font-bold text-white my-4 ml-3 sm:text-2xl">Business| Data Analyst | Software Development</div>
+    <div class="text-lg font-bold text-white my-4 ml-3 sm:text-2xl">
+      Software Developer | DevOps Engineer
+    </div>
     <div class="flex mt-5">
       <a href="mailto:napas.vin@gmail.com">
-        <fa-icon [icon]="faEnvelope" size="3x" class="text-3xl text-black m-4 cursor-pointer" [ngClass]="{'hover:text-[#2A9D8F]': isHovering}"></fa-icon>
+        <fa-icon
+          [icon]="faEnvelope"
+          size="2x"
+          class="text-3xl text-black m-4 cursor-pointer"
+          [ngClass]="{ 'hover:text-[#2A9D8F]': isHovering }"
+        ></fa-icon>
       </a>
       <a href="https://github.com/Nas-virat">
-        <fa-icon [icon]="faGithub" size="3x" class="text-3xl text-black m-4 cursor-pointer" [ngClass]="{'hover:text-[#2A9D8F]': isHovering}"></fa-icon>
+        <fa-icon
+          [icon]="faGithub"
+          size="2x"
+          class="text-3xl text-black m-4 cursor-pointer"
+          [ngClass]="{ 'hover:text-[#2A9D8F]': isHovering }"
+        ></fa-icon>
       </a>
       <a href="https://www.linkedin.com/in/napas-vinitnantharat-483467202/">
-        <fa-icon [icon]="faLinkedin" size="3x" class="text-3xl text-black m-4 cursor-pointer" [ngClass]="{'hover:text-[#2A9D8F]': isHovering}"></fa-icon>
+        <fa-icon
+          [icon]="faLinkedin"
+          size="2x"
+          class="text-3xl text-black m-4 cursor-pointer"
+          [ngClass]="{ 'hover:text-[#2A9D8F]': isHovering }"
+        ></fa-icon>
       </a>
       <a href="https://medium.com/@napas.vin">
-        <fa-icon [icon]="faMedium" size="3x" class="text-3xl text-black m-4 cursor-pointer" [ngClass]="{'hover:text-[#2A9D8F]': isHovering}"></fa-icon>
+        <fa-icon
+          [icon]="faMedium"
+          size="2x"
+          class="text-3xl text-black m-4 cursor-pointer"
+          [ngClass]="{ 'hover:text-[#2A9D8F]': isHovering }"
+        ></fa-icon>
       </a>
     </div>
   </div>
