--- a/personal-info/src/app/workexperience/workexperience.component.html
+++ b/personal-info/src/app/workexperience/workexperience.component.html
@@ -1,1 +1,5 @@
-<p>workexperience works!</p>
+<section className="w-full bg-work-bg" id="work-page">
+    <div className="flex flex-col justify-center items-center h-full">
+      <div className="text-6xl font-bold text-white mt-32 mb-5 px-2">Work Experience</div>
+    </div>
+</section>
