poc timeline experience

--- a/personal-info/src/app/education/education.component.html
+++ b/personal-info/src/app/education/education.component.html
@@ -1,1 +1,5 @@
-<p>education works!</p>
+<section class="w-full pt-12 pb-12 bg-education-bg" id="education-page">
+  <div class="flex flex-col justify-center items-center h-full">
+    <div class="text-6xl font-bold text-white mt-32 mb-5 px-2">Education</div>
+  </div>
+</section>
