--- a/personal-info/src/app/workexperience/workexperience.component.html
+++ b/personal-info/src/app/workexperience/workexperience.component.html
@@ -1,5 +1,54 @@
-<section className="w-full bg-work-bg" id="work-page">
-    <div className="flex flex-col justify-center items-center h-full">
-      <div className="text-6xl font-bold text-white mt-32 mb-5 px-2">Work Experience</div>
+<section class="w-full pt-12 pb-12 bg-work-bg" id="work-page">
+  <div class="flex flex-col justify-center items-center h-full">
+    <div class="text-6xl font-bold text-white mt-32 mb-5 px-2">
+      Work Experience
     </div>
+  </div>
+  <div class="p-7">
+    <p-timeline
+      [value]="workelements"
+      align="alternate"
+      styleClass="customized-timeline"
+    >
+      <ng-template pTemplate="marker" let-event>
+        <span
+          class="flex w-2rem h-2rem align-items-center justify-content-center text-white border-circle z-1 shadow-1 bg-cyan-50"
+        >
+        </span>
+      </ng-template>
+      <ng-template pTemplate="content" let-event>
+        <div class="rounded-lg bg-white p-12">
+          <p class="vertical-timeline-element-title text-3xl font-bold">
+            {{ event.role }}
+          </p>
+          <p
+            class="vertical-timeline-element-subtitle text-2xl font-semibold my-6"
+          >
+            {{ event.date }}
+          </p>
+          <p class="vertical-timeline-element-subtitle text-2xl font-semibold">
+            {{ event.company }}
+          </p>
+          <div class="flex flex-col items-center justify-center">
+            <img
+              class="w-full h-full object-cover rounded-lg py-3"
+              *ngIf="event.image"
+              [src]="event.image"
+              alt="event.id"
+            />
+            <ul>
+              <li class="text-blue-700 font-semibold text-lg">
+                {{ event.skills }}
+              </li>
+            </ul>
+            <div
+              class="w-full mt-3 p-5 cursor-pointer bg-amber-500 rounded-lg items-center text-center text-2xl text-white"
+            >
+              <a href="event.link" type="" href=""> More Detail </a>
+            </div>
+          </div>
+        </div>
+      </ng-template>
+    </p-timeline>
+  </div>
 </section>
