--- a/personal-info/src/styles.css
+++ b/personal-info/src/styles.css
@@ -3,15 +3,15 @@
 @tailwind components;
 @tailwind utilities;
 
-*{
+* {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
 }
 
-html,body
-{
+html,
+body {
   width: 100%;
   height: 100%;
   margin: 0px;
@@ -24,35 +24,45 @@ html,body
 }
 
 .textwritter {
- letter-spacing: 10px;
- border-right: 5px solid;
- width: 100%;
+  letter-spacing: 10px;
+  border-right: 5px solid;
+  width: 100%;
   white-space: nowrap;
   overflow: hidden;
-  animation: typing 3s steps(40, end),
-  blink-caret .75s step-end infinite;
+  animation:
+    typing 3s steps(40, end),
+    blink-caret 0.75s step-end infinite;
 }
 
 /* cursor animation */
 @keyframes blink-caret {
-  from, to { border-color: transparent }
-  50% { border-color: #E76F51; }
+  from,
+  to {
+    border-color: transparent;
+  }
+  50% {
+    border-color: #e76f51;
+  }
 }
 
 /* Typewriter Animation */
 @keyframes typing {
-  from { width: 0 }
-  to { width: 100% }
+  from {
+    width: 0;
+  }
+  to {
+    width: 100%;
+  }
 }
 
-.timeline{
+.timeline {
   z-index: 1 !important;
 }
 
-.z-navbar{
+.z-navbar {
   z-index: 999 !important;
 }
 
-.autofitgrid{
+.autofitgrid {
   grid-template-columns: repeat(auto-fit, minmax(340px, 1fr));
 }
